--- a/notebooks/requirements.txt
+++ b/notebooks/requirements.txt
@@ -1,6 +1,7 @@
-gretel-synthetics==0.19.0
-kafka-python==2.0.2
-matplotlib==3.4.1
-numpy==1.20.0
-pandas==1.2.4
-torch==1.11.0
+gretel-synthetics~=0.19.0
+kafka-python~=2.0.2
+matplotlib~=3.4.1
+numpy~=1.20.0
+pandas~=1.2.4
+torch~=1.11.0
+pillow~=11.0.0
